# cmake-generated-header-problem

./: CMakeLists.txt  foo.c  foo2.c
